// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NtroSection component should render default view 1`] = `
<Section
  cards={
    Object {
      "current": Array [
        Object {
          "groups": Array [
            Array [
              "significanceAndContributionStatement",
            ],
          ],
          "title": "Scale/Significance of work & Creator research statement",
        },
        Object {
          "groups": Array [
            Array [
              "fez_record_search_key_ismn",
            ],
          ],
          "title": "ISMN",
        },
        Object {
          "groups": Array [
            Array [
              "qualityIndicators",
            ],
          ],
          "title": "Quality indicators",
        },
      ],
    }
  }
  disabled={false}
/>
`;

exports[`NtroSection component should render disabled view 1`] = `
<Section
  cards={
    Object {
      "current": Array [
        Object {
          "groups": Array [
            Array [
              "significanceAndContributionStatement",
            ],
          ],
          "title": "Scale/Significance of work & Creator research statement",
        },
        Object {
          "groups": Array [
            Array [
              "fez_record_search_key_ismn",
            ],
          ],
          "title": "ISMN",
        },
        Object {
          "groups": Array [
            Array [
              "qualityIndicators",
            ],
          ],
          "title": "Quality indicators",
        },
      ],
    }
  }
  disabled={true}
/>
`;
